# buds

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt
src/buds+/: argos_output.cpp  argos_output.h  bluetooth_client.cpp  bluetooth_client.h  buds_client.cpp  buds_client.h  cli.cpp  cli.h  config.cpp  config.h  constants.h  galaxy-buds-rfcomm-crc16-ccitt.cpp  galaxy-buds-rfcomm-crc16-ccitt.h  log.cpp  log.h  main.cpp  message.h  message_builder.h  message_parser.cpp  message_parser.h  output.h  util.cpp  util.h
systemd/: buds.service
